--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,13 @@
 
 /* MailChimp Form BACKUP
 Embed Code - Classic - 12/17/2015 v10.7 */
-#mc_embed_signup form {display:block; position:relative; text-align:left; margin: 20px; background-color: #ffffff; padding: 20px;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);border-radius: 5px; width: 80%;}
+#mc_embed_signup form {display:block; position:relative; text-align:left; margin: 20px; background-color: #ffffff; padding: 20px;box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);width: 90%;}
 #mc_embed_signup h2 {font-weight:bold; padding:0; margin:15px 0; font-size:1.4em;}
 #mc_embed_signup input {border: 2px solid #00a4a3; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;}
 #mc_embed_signup input[type=checkbox]{-webkit-appearance:checkbox;}
 #mc_embed_signup input[type=radio]{-webkit-appearance:radio;}
 #mc_embed_signup input:focus {border-color:#333;}
-#mc_embed_signup .button {clear:both; background-color: #fd7d2c; border: 0 none; border-radius:100px; transition: all 0.23s ease-in-out 0s; color: #FFFFFF; cursor: pointer; display: inline-block; font-size:20px; font-weight: normal; height: 40px; line-height: 32px; margin: 0 5px 10px 0; padding: 0 22px; text-align: center; text-decoration: none; vertical-align: top; white-space: nowrap; width: fit-content; width: -moz-fit-content;}
+#mc_embed_signup .button {clear:both; background-color: #fd7d2c; border: 0 solid #ffffff; border-radius:100px; transition: all 0.23s ease-in-out 0s; color: #FFFFFF; cursor: pointer; display: inline-block; font-size:20px; font-weight: normal; height: 40px; line-height: 32px; margin: 0 5px 10px 0; padding: 0 22px; text-align: center; text-decoration: none; vertical-align: top; white-space: nowrap; width: fit-content; width: -moz-fit-content;}
 #mc_embed_signup .button:hover {background-color:#FF8000;}
 #mc_embed_signup .small-meta {font-size: 11px;}
 #mc_embed_signup .nowrap {white-space:nowrap;}
