--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ p {
   font-size: 1em;
   line-height: 1.7;
   font-weight: 300;
-  color: var(--text-gray);
+  color: #fff;
 }
 
 .description {
@@ -43,6 +43,7 @@ a {
   gap: 24px;
   padding: 24px;
   flex-wrap: wrap;
+  background: #00a4a3;
 }
 
 .box {
@@ -51,7 +52,7 @@ a {
   flex-basis: 100%;
   position: relative;
   padding: 24px;
-  background: #fff;
+  background: #00a4a3;
 }
 
 .box-top {
@@ -77,6 +78,7 @@ a {
 
 .box-title {
   border-left: 3px solid #fd7d2c;
+  color: #fff;
   padding-left: 12px;
 }
 
@@ -147,7 +149,7 @@ a {
 
 @media (min-width: 1024px) {
   .box {
-    flex-basis: calc(33.3% - 16px);
+    flex-basis: calc(19% - 16px);
   }
   .title-flex {
     display: flex;
@@ -162,6 +164,6 @@ a {
 
 @media (min-width: 1100px) {
   .box {
-    flex-basis: calc(25% - 18px);
+    flex-basis: calc(19% - 20px);
   }
 }
