--- a/css/styles.css
+++ b/css/styles.css
@@ -2,20 +2,20 @@
 /* MailChimp Form BACKUP
 Embed Code - Classic - 12/17/2015 v10.7 */
 #mc_embed_signup form {display:block; position:relative; text-align:left; border-radius:10px; margin: 20px; background-color: #ffffff; padding: 20px;width: 90%;}
-#mc_embed_signup h2 {font-weight:bold; padding:0; margin:15px 0; font-size:1.4em;}
+#mc_embed_signup h2 {font-weight:bold; padding:0; margin:15px 0; font-size:1.4em; color: black;}
 #mc_embed_signup input {border: 2px solid #00a4a3; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;}
 #mc_embed_signup input[type=checkbox]{-webkit-appearance:checkbox;}
 #mc_embed_signup input[type=radio]{-webkit-appearance:radio;}
 #mc_embed_signup input:focus {border-color:#333;}
 #mc_embed_signup .button {clear:both; background-color: #fd7d2c; border: 0 solid #ffffff; border-radius:100px; transition: all 0.23s ease-in-out 0s; color: #FFFFFF; cursor: pointer; display: inline-block; font-size:20px; font-weight: normal; height: 40px; line-height: 32px; margin: 0 5px 10px 0; padding: 0 22px; text-align: center; text-decoration: none; vertical-align: top; white-space: nowrap; width: fit-content; width: -moz-fit-content;}
 #mc_embed_signup .button:hover {background-color:#FF8000;}
-#mc_embed_signup .small-meta {font-size: 11px;}
+#mc_embed_signup .small-meta {font-size: 11px; color: black;}
 #mc_embed_signup .nowrap {white-space:nowrap;}
 
-#mc_embed_signup .mc-field-group {clear:left; position:relative; width:96%; padding-bottom:3%; min-height:50px; display:grid;}
+#mc_embed_signup .mc-field-group {clear:left; position:relative; width:96%; padding-bottom:3%; min-height:50px; display:grid; color: black;}
 #mc_embed_signup .size1of2 {clear:none; float:left; display:inline-block; width:46%; margin-right:4%;}
 * html #mc_embed_signup .size1of2 {margin-right:2%; /* Fix for IE6 double margins. */}
-#mc_embed_signup .mc-field-group label {display:block; margin-bottom:3px;}
+#mc_embed_signup .mc-field-group label {display:block; margin-bottom:3px; color: black;}
 #mc_embed_signup .mc-field-group input {display:block; width:100%; padding:8px 0; text-indent:2%;}
 #mc_embed_signup .mc-field-group select {display:inline-block; width:99%; padding:5px 0; margin-bottom:2px;}
 #mc_embed_signup .mc-address-fields-group {display:flex; flex-direction:row; justify-content:space-evenly; width:96%; gap:15px;}
@@ -27,7 +27,7 @@ Embed Code - Classic - 12/17/2015 v10.7 */
 #mc_embed_signup .datefield .monthfield input, #mc_embed_signup .datefield .dayfield input{width:30px;}
 #mc_embed_signup .datefield label, #mc_embed_signup .phonefield-us label{display:none;}
 
-#mc_embed_signup .indicates-required {text-align:right; font-size:11px; margin-right:4%;}
+#mc_embed_signup .indicates-required {text-align:right; font-size:11px; margin-right:4%; color:black;}
 #mc_embed_signup .asterisk {color:#fd7d2c; font-size:150%; font-weight:normal; position:relative; top:5px;}     
 #mc_embed_signup .clear {clear:both;}
 #mc_embed_signup .foot {display:grid; grid-template-columns: 3fr 1fr; width:96%; align-items: center;}
@@ -40,7 +40,7 @@ Embed Code - Classic - 12/17/2015 v10.7 */
 
 #mc_embed_signup .mc-field-group.input-group ul {margin:0; padding:5px 0; list-style:none;}
 #mc_embed_signup .mc-field-group.input-group ul li {display:block; padding:3px 0; margin:0;}
-#mc_embed_signup .mc-field-group.input-group label {display:inline;}
+#mc_embed_signup .mc-field-group.input-group label {display:inline; color: black;}
 #mc_embed_signup .mc-field-group.input-group input {display:inline; width:auto; border:none;}
 
 #mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%; margin: 0 5%; clear: both;}
