--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ a {
   flex-direction: column;
   position: relative;
   gap: 12px;
-  margin-bottom: 36px;
+  /*  margin-bottom: 36px; */
 }
 
 .box-image {
